# genai_fa_component

./: .env.example  .gitignore  ANALYTICS_COMPLETE.md  BRANDING_UPDATE.md  COMPLETE_ENHANCEMENTS_SUMMARY.md  COMPLETE_FEATURE_SUMMARY.md  GEMINI_CONFIGURED.md  GETTING_STARTED.md  GITHUB_NO_TOKEN_NEEDED.md  GITHUB_TOKEN_INFO.md  LATEST_IMPROVEMENTS.md  LICENSE  PROJECT_README.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_FOOTER_UPDATE.md  SCORE_AND_STATS_FIX.md  SETUP_COMPLETE.md  list_models.py  pyproject.toml  requirements.txt  run.sh  setup.sh  start.sh  test_assignment_stats.py  test_gemini.py  test_github.py  test_score_extraction.py
config/: asgi.py  settings.py  urls.py  wsgi.py
docs/: ANALYTICS_GUIDE.md  REPO_DETAIL_FEATURES.md
edutrack/: admin.py  analytics.py  apps.py  models.py  urls.py  views.py
edutrack/api/: gemini_handler.py  github_handler.py
edutrack/migrations/: 0001_initial.py
edutrack/templates/: add_repo.html  assignment_analytics.html  assignment_create.html  assignment_detail.html  assignment_list.html  base.html  bulk_add_repos.html  dashboard.html  home.html  login.html  register.html  repo_detail.html
edutrack/templatetags/: __init__.py  markdown_filters.py
